# assistant

./: .gitignore  Dockerfile  agent.py  chainlit_app.py  display.py  main.py  pyproject.toml
.chainlit/: config.toml
tools/: doctrine.py
