[project]
name = "web-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "chainlit>=2.10.0",
    "greenlet>=3.3.2",
    "langchain>=1.2.11",
    "langchain-aws[anthropic]>=1.4.0",
    "langchain-openai>=1.1.11",
    "langchain-perplexity>=1.1.0",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.0",
    "langsmith>=0.7.16",
    "pymupdf>=1.27.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.45.0",
    "tavily>=1.1.0",
]
